fix(dev): fix flex align items

--- a/resources/scss/pages/play-page.scss
+++ b/resources/scss/pages/play-page.scss
@@ -18,7 +18,7 @@
 .play-page__button {
     background: #171D5B;
     display: flex;
-    align-items: centerser;
+    align-items: center;
     justify-content: space-between;
     border: none;
     color: #fff;
